--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/vitorhugo21/Books-Directory#readme",
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/fs-extra": "^9.0.1",
     "@types/node": "^14.6.2",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "eslint": "^7.8.0",
@@ -31,8 +33,10 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "swagger-ui-express": "^4.1.4",
+    "yamljs": "^0.3.0"
   }
 }
